template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "prefix": {
            "type": "string",
            "metadata": {
                "description": "Prefix for all of the names of new resources"
            }
        },
        "username": {
            "type": "string",
            "metadata": {
                "description": "Admin username for connecting to VMs."
            }
        },
        "sshPublicKey": {
            "type": "string",
            "metadata": {
                "description": "ssh public key for connecting to VMs."
            }
        }
    },
    "variables": {
        "virtualMachine_name": "[concat(parameters('prefix'), '-turn-server-vm')]",
        "networkInterface_name": "[concat(parameters('prefix'), '-networkInterface')]",
        "networkSecurityGroup_nsg_name": "[concat(parameters('prefix'), '-SecurityGroups_nsg')]",
        "publicIPAddress_ip_name": "[concat(parameters('prefix'), '-publicIPAddress')]",
        "virtualNetwork_name": "[concat(parameters('prefix'), '-virtualNetwork')]",
        "storageAccount1_name": "[concat(parameters('prefix'), 'storage1')]",
        "storageAccount2_name": "[concat(parameters('prefix'), 'storage2')]",
        "location": "centralus",
        "sshKeyPath": "[concat('/home/',parameters('username'),'/.ssh/authorized_keys')]"
    },
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/04f7ec88-8e28-41ed-8537-5e17766001f5/resourceGroups/3dstreaming-turn/providers/Microsoft.Compute/virtualMachines/3dstreaming-turn'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[variables('virtualMachine_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "[variables('location')]",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "16.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[variables('virtualMachine_name')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https', '://', variables('storageAccount2_name'), '.blob.core.windows.net', concat('/vhds/', variables('virtualMachine_name'),'20170414132350.vhd'))]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[variables('virtualMachine_name')]",
                    "adminUsername": "[parameters('username')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                    {
                                         "path": "[variables('sshKeyPath')]",
                                        "keyData": "[parameters('sshPublicKey')]"
                                    }
                                ]
                            }
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterface_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https', '://', variables('storageAccount1_name'), '.blob.core.windows.net', '/')]"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccount2_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterface_name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccount1_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/04f7ec88-8e28-41ed-8537-5e17766001f5/resourceGroups/3dstreaming-turn/providers/Microsoft.Network/networkInterfaces/3dstreaming-turn659'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[variables('networkInterface_name')]",
            "apiVersion": "2016-03-30",
            "location": "[variables('location')]",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "10.0.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddress_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetwork_name')), '/subnets/default')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroup_nsg_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddress_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetwork_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroup_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/04f7ec88-8e28-41ed-8537-5e17766001f5/resourceGroups/3dstreaming-turn/providers/Microsoft.Network/networkSecurityGroups/3dstreaming-turn-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('networkSecurityGroup_nsg_name')]",
            "apiVersion": "2016-03-30",
            "location": "[variables('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-ssh",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AllowIn3478",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3478",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AllowIn3000",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3000",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1020,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/04f7ec88-8e28-41ed-8537-5e17766001f5/resourceGroups/3dstreaming-turn/providers/Microsoft.Network/publicIPAddresses/3dstreaming-turn-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('publicIPAddress_ip_name')]",
            "apiVersion": "2016-03-30",
            "location": "[variables('location')]",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/04f7ec88-8e28-41ed-8537-5e17766001f5/resourceGroups/3dstreaming-turn/providers/Microsoft.Network/virtualNetworks/3dstreaming-turn'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('virtualNetwork_name')]",
            "apiVersion": "2016-03-30",
            "location": "[variables('location')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/04f7ec88-8e28-41ed-8537-5e17766001f5/resourceGroups/3dstreaming-turn/providers/Microsoft.Storage/storageAccounts/3dstreamingturndiag747'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[variables('storageAccount1_name')]",
            "apiVersion": "2016-01-01",
            "location": "[variables('location')]",
            "tags": {},
            "properties": {},
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/04f7ec88-8e28-41ed-8537-5e17766001f5/resourceGroups/3dstreaming-turn/providers/Microsoft.Storage/storageAccounts/3dstreamingturndisks541'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Premium_LRS",
                "tier": "Premium"
            },
            "kind": "Storage",
            "name": "[variables('storageAccount2_name')]",
            "apiVersion": "2016-01-01",
            "location": "[variables('location')]",
            "tags": {},
            "properties": {},
            "dependsOn": []
        },
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(variables('virtualMachine_name'),'/DockerExtension')]",
            "apiVersion": "2015-05-01-preview",
            "location": "[variables('location')]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', variables('virtualMachine_name'))]"
            ],
            "properties": {
                "publisher": "Microsoft.Azure.Extensions",
                "type": "DockerExtension",
                "typeHandlerVersion": "1.0",
                "autoUpgradeMinorVersion": true,
                "settings": { }
            }
        }
    ]
}
